fix menu z-indexes when background overlays are applied to menus

--- a/assets/css/cbox.css
+++ b/assets/css/cbox.css
@@ -62,7 +62,10 @@ h1#site-title,div#site-title {
 }
 #main-menu-wrap .sub-menu { margin: 8px 0 0 }
 .base-menu .sub-menu { padding-left: 0px !important }
-.top-wrap .base-menu.sub-menu { border-top: 0; }
+.top-wrap .base-menu.sub-menu {
+    border-top: 0;
+    position: absolute;
+}
 
 .main-menu {
 	padding: 5px;
@@ -70,6 +73,12 @@ h1#site-title,div#site-title {
 .main-menu ul a {
 	margin-right: 10px;
 }
+
+html body .top-wrap .sub-menu {
+    position: absolute;
+    z-index: 50;
+}
+
 
 /* Widgets */
 .widget { margin: 0 0 20px }
